# ftmq

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  Dockerfile  Makefile  README.md  ftm_fragments.db  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: docker.yml  python.yml
contrib/: benchmark.py
docs/: aggregation.md  api.md  cli.md  index.md  javascript.md  query.md  search.md  stores.md  versioning.md
docs/reference/: api.md  cli.md  query.md  search.md
ftmq/: __init__.py  aggregate.py  aggregations.py  cli.py  cli_util.py  filters.py  io.py  query.py  similar.py  sql.py  types.py  util.py
ftmq/api/: __init__.py  app.py  query.py  serialize.py  settings.py  store.py  views.py
ftmq/model/: __init__.py  dataset.py  entity.py  mixins.py  stats.py
ftmq/query/: __init__.py  aggregations.py  aleph.py  exceptions.py  leaves.py  main.py  nodes.py  rql.py  sql.py
ftmq/search/: __init__.py  cli.py  logic.py  model.py  settings.py
ftmq/search/store/: __init__.py  base.py  sqlite.py  tantivy.py
ftmq/store/: __init__.py  base.py  lake.py  memory.py  redis.py  sql.py
ftmq/store/fragments/: __init__.py  dataset.py  settings.py  store.py
js/: index.ts  util.ts
js/api/: index.ts  model.ts  types.ts  util.ts
js/data/: defaultModel.json  icons.json
js/model/: dataset.ts  entity.ts  icons.ts  index.ts  model.ts  property.ts  schema.ts  util.ts  value.ts
js/query/: aggregations.ts  aleph.ts  exceptions.ts  index.ts  leaves.ts  nodes.ts  query.ts  rql.ts  util.ts
js/tests/: query.test.ts
js/tests/fixtures/: query_cases.json
scripts/: gen_query_fixtures.py
tests/: conftest.py  test_aggregate.py  test_aggregation.py  test_api.py  test_api_query.py  test_cli.py  test_fragment_store.py  test_io.py  test_model.py  test_nk.py  test_proxy.py  test_query.py  test_resolve.py  test_search.py  test_search_cli.py  test_search_store.py  test_similar.py  test_sql.py  test_stats.py  test_store.py  test_store_threadsafe.py  test_util.py
tests/fixtures/: api_catalog.json  catalog.yml
