[project]
name = "ftmq"
version = "4.10.0"
description = "followthemoney query dsl and io helpers"
authors = [{ name = "Simon Wörpel", email = "simon.woerpel@pm.me" }]
license = "AGPLv3+"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "anystore (>=1.2.5,<2.0.0)",
    "rigour (>=2.2.2,<3.0.0)",
    "followthemoney (>=4.10.0,<5.0.0)",
    "nomenklatura (>=4.11.4,<5.0.0)",
    "rigour (>=2.1.2,<3.0.0)",
    "typer (>=0.26.8,<0.27.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "normality (>=3.1.0,<4.0.0)",
    "pyrql (>=0.7.11,<1.0.0)",
]

[project.optional-dependencies]
level = ["plyvel (>=1.5.1,<2.0.0)"]
sql = ["sqlalchemy (>=2.0.51,<3.0.0)"]
postgres = ["sqlalchemy (>=2.0.51,<3.0.0)", "psycopg[pool] (>=3.2.9,<4.0.0)"]
redis = ["redis (>=5.2.1,<6.0.0)", "fakeredis (>=2.36.2,<3.0.0)"]
lake = [
    "duckdb (>=1.5.4,<2.0.0)",
    "deltalake (>=1.6.2,<2.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
]
aleph = ["furl (>=2.1.4,<3.0.0)", "alephclient (>=2.6.0,<3.0.0)"]
search = ["tantivy (>=0.26.0,<0.27.0)"]
api = [
    "fastapi (>=0.139.2,<0.140.0)",
    "furl (>=2.1.4,<3.0.0)",
    "granian (>=2.7.9,<3.0.0)",
]

[project.scripts]
ftmq = "ftmq.cli:cli"

[project.urls]
Homepage = "https://docs.investigraph.dev/lib/ftmq"
Documentation = "https://docs.investigraph.dev/lib/ftmq"
Repository = "https://github.com/dataresearchcenter/ftmq"
Issues = "https://github.com/dataresearchcenter/ftmq/issues"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.1,<10.0.0"
pytest-cov = ">=4.1,<8.0"
pytest-env = "^1.4.0"
black = ">=26.5.1,<27.0"
isort = "^8.0.1"
mypy = "^2.1.0"
pre-commit = "^4.0.1"
flake8 = ">=6.1,<8.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"
mkdocs = "^1.6.1"
mkdocs-autorefs = "^1.4.4"
mkdocstrings-python = "^2.0.5"
mkdocs-material = "^9.7.7"
mkdocs-click = "^0.9.0"
griffe = "<3"
anystore = {extras = ["http", "s3"], version = "^1.2.5"}
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
NOMENKLATURA_STATEMENT_TABLE = "test_table"
NOMENKLATURA_DB_URL = "sqlite:///:memory:"
DEBUG = 1
MAX_SQL_AGG_GROUPS = 11
FTMQ_API_USE_CACHE = 1
FTMQ_API_CACHE_URI = "memory:///ftmq-api-cache"
